Adopt DefaultDataConverter