@@ -15,304 +15,876 @@
  */
 package com.vaadin.flow.component.ai.chart;
 
+import java.io.Serializable;
+import java.sql.Timestamp;
+import java.time.Instant;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Date;
+import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
+import java.util.function.Consumer;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import com.vaadin.flow.component.charts.model.AbstractSeries;
 import com.vaadin.flow.component.charts.model.BoxPlotItem;
 import com.vaadin.flow.component.charts.model.DataSeries;
 import com.vaadin.flow.component.charts.model.DataSeriesItem;
 import com.vaadin.flow.component.charts.model.DataSeriesItem3d;
 import com.vaadin.flow.component.charts.model.DataSeriesItemBullet;
 import com.vaadin.flow.component.charts.model.DataSeriesItemSankey;
+import com.vaadin.flow.component.charts.model.DataSeriesItemTimeline;
 import com.vaadin.flow.component.charts.model.DataSeriesItemXrange;
+import com.vaadin.flow.component.charts.model.FlagItem;
+import com.vaadin.flow.component.charts.model.GanttSeries;
+import com.vaadin.flow.component.charts.model.GanttSeriesItem;
+import com.vaadin.flow.component.charts.model.HeatSeries;
+import com.vaadin.flow.component.charts.model.Node;
+import com.vaadin.flow.component.charts.model.NodeSeries;
 import com.vaadin.flow.component.charts.model.OhlcItem;
 import com.vaadin.flow.component.charts.model.Series;
+import com.vaadin.flow.component.charts.model.TreeSeries;
+import com.vaadin.flow.component.charts.model.TreeSeriesItem;
+import com.vaadin.flow.component.charts.model.WaterFallSum;
+import com.vaadin.flow.component.charts.model.style.SolidColor;
+import com.vaadin.flow.component.charts.util.Util;
 
 /**
- * Default implementation of DataConverter that handles common data conversion
- * patterns for various chart types.
+ * Default implementation of {@link DataConverter} that handles common data
+ * conversion patterns for various chart types.
  * <p>
- * This converter uses intelligent detection based on column count and naming
- * patterns to determine the appropriate data structure.
+ * This converter uses column-name-based pattern matching to determine the
+ * appropriate series type and data structure. Patterns are checked in priority
+ * order from most-specific to least-specific:
+ * </p>
+ * <ol>
+ * <li>OHLC/Candlestick ({@code open}, {@code high}, {@code low},
+ * {@code close})</li>
+ * <li>BoxPlot ({@code low}, {@code q1}, {@code median}, {@code q3},
+ * {@code high})</li>
+ * <li>Organization ({@code id}, {@code name}, {@code parent}, {@code title};
+ * optionally {@code description}, {@code image}, {@code color})</li>
+ * <li>Gantt ({@code name}, {@code start}, {@code end}; optionally {@code id},
+ * {@code parent}, {@code dependency}, {@code completed}, {@code color})</li>
+ * <li>Treemap ({@code id}, {@code parent}, {@code value})</li>
+ * <li>Sankey ({@code from}, {@code to}, {@code weight})</li>
+ * <li>Heatmap ({@code x}, {@code y}, {@code value})</li>
+ * <li>XRange ({@code x}, {@code x2}, {@code y})</li>
+ * <li>Timeline ({@code name}, {@code label}, {@code description})</li>
+ * <li>Bubble ({@code x}, {@code y}, {@code z})</li>
+ * <li>Flags ({@code title}, optionally {@code text}; requires absence of
+ * {@code parent} to avoid matching Organization/Treemap data)</li>
+ * <li>Range ({@code low}, {@code high})</li>
+ * <li>Bullet ({@code y}, {@code target})</li>
+ * <li>Waterfall ({@code y}, {@code waterfall_type}; type values are
+ * {@code "sum"} and {@code "intermediate"}, case-insensitive; {@code null} or
+ * absent for regular data points)</li>
+ * <li>Fallback: first non-numeric column as category, first numeric column as
+ * value</li>
+ * </ol>
+ * <p>
+ * Additionally, any pattern that produces a {@code DataSeriesItem} (or
+ * subclass) supports an optional {@code color} column. If present, the value is
+ * used to set the item's color via {@link SolidColor#SolidColor(String)}.
+ * </p>
+ * <p>
+ * Column name matching is case-insensitive. Column names are determined from
+ * the first row; subsequent rows with missing keys will yield {@code null} for
+ * those columns.
+ * </p>
+ * <p>
+ * If the data contains a {@code series} column, rows are automatically grouped
+ * by that column's value and each group is converted into a separate named
+ * series. The {@code series} column is removed before pattern matching so it
+ * does not interfere with chart type detection.
  * </p>
  *
  * @author Vaadin Ltd
  */
 public class DefaultDataConverter implements DataConverter {
 
+    private static final Logger LOGGER = LoggerFactory
+            .getLogger(DefaultDataConverter.class);
+
+    private static final List<String> X_COLUMN_NAMES = List.of("x", "date",
+            "time", "timestamp", "datetime");
+
     @Override
-    public List<Series> convertToSeries(
-            List<Map<String, Object>> data) {
-        if (data == null || data.isEmpty()) {
+    public List<Series> convertToSeries(List<Map<String, Object>> data) {
+        Objects.requireNonNull(data, "Data must not be null");
+
+        if (data.isEmpty()) {
             return List.of(new DataSeries());
         }
 
-        Map<String, Object> firstRow = data.get(0);
-        List<String> columnNames = new ArrayList<>(firstRow.keySet());
+        var columnMapping = buildColumnMapping(data.getFirst());
+        var columns = columnMapping.keySet();
 
-        if (columnNames.isEmpty()) {
-            throw new IllegalArgumentException(
-                    "Query results must have at least 1 column");
+        if (columns.contains("series")) {
+            return convertGrouped(data, columnMapping);
         }
 
-        return List.of(switch (columnNames.size()) {
-        case 1 -> convertSingleColumn(data, columnNames);
-        case 2 -> convertTwoColumns(data, columnNames);
-        case 3 -> convertThreeColumns(data, columnNames);
-        case 4 -> convertTwoColumns(data, columnNames.subList(0, 2));
-        case 5 -> convertFiveColumns(data, columnNames);
-        default -> convertTwoColumns(data, columnNames.subList(0, 2));
-        });
+        return List.of(convertSingle(data, columns, columnMapping));
     }
 
-    private DataSeries convertSingleColumn(
-            List<Map<String, Object>> queryResults,
-            List<String> columnNames) {
-        DataSeries series = new DataSeries();
-        String columnName = columnNames.get(0);
-        Map<String, Integer> valueCounts = new java.util.LinkedHashMap<>();
-
-        for (Map<String, Object> row : queryResults) {
-            Object valueObj = row.get(columnName);
-            String category = valueObj != null ? valueObj.toString()
-                    : "Unknown";
-            valueCounts.merge(category, 1, Integer::sum);
-        }
-
-        for (Map.Entry<String, Integer> entry : valueCounts.entrySet()) {
-            series.add(new DataSeriesItem(entry.getKey(), entry.getValue()));
-        }
-        return series;
+    /**
+     * Converts a single dataset (no {@code series} column) into one series.
+     */
+    private AbstractSeries convertSingle(List<Map<String, Object>> data,
+            Set<String> columns, Map<String, String> columnMapping) {
+        return tryOhlc(data, columns, columnMapping)
+                .or(() -> tryBoxPlot(data, columns, columnMapping))
+                .or(() -> tryOrganization(data, columns, columnMapping))
+                .or(() -> tryGantt(data, columns, columnMapping))
+                .or(() -> tryTreemap(data, columns, columnMapping))
+                .or(() -> trySankey(data, columns, columnMapping))
+                .or(() -> tryHeatmap(data, columns, columnMapping))
+                .or(() -> tryXRange(data, columns, columnMapping))
+                .or(() -> tryTimeline(data, columns, columnMapping))
+                .or(() -> tryBubble(data, columns, columnMapping))
+                .or(() -> tryFlags(data, columns, columnMapping))
+                .or(() -> tryRange(data, columns, columnMapping))
+                .or(() -> tryBullet(data, columns, columnMapping))
+                .or(() -> tryWaterfall(data, columns, columnMapping))
+                .orElseGet(() -> convertFallback(data, columns, columnMapping));
     }
 
-    private DataSeries convertTwoColumns(
-            List<Map<String, Object>> queryResults,
-            List<String> columnNames) {
-        DataSeries series = new DataSeries();
-        String col1 = columnNames.get(0);
-        String col2 = columnNames.get(1);
+    /**
+     * Groups rows by the {@code series} column, converts each group
+     * independently, and returns one named series per group.
+     */
+    private List<Series> convertGrouped(List<Map<String, Object>> data,
+            Map<String, String> columnMapping) {
+        var originalSeriesKey = columnMapping.get("series");
+        var groups = new LinkedHashMap<String, List<Map<String, Object>>>();
+        for (var row : data) {
+            var groupName = toText(row.get(originalSeriesKey));
+            var key = groupName != null ? groupName : "";
+            groups.computeIfAbsent(key, k -> new ArrayList<>()).add(row);
+        }
 
-        for (Map<String, Object> row : queryResults) {
-            Object val1 = row.get(col1);
-            Object val2 = row.get(col2);
+        var result = new ArrayList<Series>();
+        for (var entry : groups.entrySet()) {
+            var groupRows = entry.getValue().stream()
+                    .map(row -> withoutKey(row, originalSeriesKey)).toList();
+            var groupMapping = buildColumnMapping(groupRows.getFirst());
+            var series = convertSingle(groupRows, groupMapping.keySet(),
+                    groupMapping);
+            series.setName(entry.getKey().isEmpty() ? null : entry.getKey());
+            result.add(series);
+        }
+        return result;
+    }
 
-            if (isNumeric(val1) && isNumeric(val2)) {
-                series.add(new DataSeriesItem(convertToNumber(val1),
-                        convertToNumber(val2)));
+    private static Map<String, Object> withoutKey(Map<String, Object> row,
+            String key) {
+        var copy = new LinkedHashMap<>(row);
+        copy.remove(key);
+        return copy;
+    }
+
+    // --- Pattern matchers returning DataSeries ---
+
+    private Optional<AbstractSeries> tryOhlc(List<Map<String, Object>> data,
+            Set<String> columns, Map<String, String> columnMapping) {
+        if (!hasColumns(columns, "open", "high", "low", "close")) {
+            return Optional.empty();
+        }
+        var xCol = findXColumn(columns);
+        var series = new DataSeries();
+        for (var i = 0; i < data.size(); i++) {
+            var row = data.get(i);
+            var open = getNumber(row, columnMapping, "open");
+            var high = getNumber(row, columnMapping, "high");
+            var low = getNumber(row, columnMapping, "low");
+            var close = getNumber(row, columnMapping, "close");
+            if (open == null && high == null && low == null && close == null) {
+                continue;
+            }
+            var x = resolveX(row, columnMapping, xCol, i);
+            var item = new OhlcItem(x, open, high, low, close);
+            applyColor(item, row, columnMapping, columns);
+            series.add(item);
+        }
+        return Optional.of(series);
+    }
+
+    private Optional<AbstractSeries> tryBoxPlot(List<Map<String, Object>> data,
+            Set<String> columns, Map<String, String> columnMapping) {
+        if (!hasColumns(columns, "low", "q1", "median", "q3", "high")) {
+            return Optional.empty();
+        }
+        var series = new DataSeries();
+        for (var row : data) {
+            var low = getNumber(row, columnMapping, "low");
+            var q1 = getNumber(row, columnMapping, "q1");
+            var median = getNumber(row, columnMapping, "median");
+            var q3 = getNumber(row, columnMapping, "q3");
+            var high = getNumber(row, columnMapping, "high");
+            if (low == null && q1 == null && median == null && q3 == null
+                    && high == null) {
+                continue;
+            }
+            var item = new BoxPlotItem(low, q1, median, q3, high);
+            applyColor(item, row, columnMapping, columns);
+            series.add(item);
+        }
+        return Optional.of(series);
+    }
+
+    private Optional<AbstractSeries> trySankey(List<Map<String, Object>> data,
+            Set<String> columns, Map<String, String> columnMapping) {
+        if (!hasColumns(columns, "from", "to", "weight")) {
+            return Optional.empty();
+        }
+        var series = new DataSeries();
+        for (var row : data) {
+            var from = getText(row, columnMapping, "from");
+            var to = getText(row, columnMapping, "to");
+            var weight = getNumber(row, columnMapping, "weight");
+            if (from == null && to == null && weight == null) {
+                continue;
+            }
+            var item = new DataSeriesItemSankey(from, to, weight);
+            applyColor(item, row, columnMapping, columns);
+            series.add(item);
+        }
+        return Optional.of(series);
+    }
+
+    private Optional<AbstractSeries> tryXRange(List<Map<String, Object>> data,
+            Set<String> columns, Map<String, String> columnMapping) {
+        if (!hasColumns(columns, "x", "x2", "y")) {
+            return Optional.empty();
+        }
+        var series = new DataSeries();
+        for (var row : data) {
+            var x = getNumber(row, columnMapping, "x");
+            var x2 = getNumber(row, columnMapping, "x2");
+            var y = getNumber(row, columnMapping, "y");
+            if (x == null && x2 == null && y == null) {
+                continue;
+            }
+            var item = new DataSeriesItemXrange(x, x2, y);
+            applyColor(item, row, columnMapping, columns);
+            series.add(item);
+        }
+        return Optional.of(series);
+    }
+
+    private Optional<AbstractSeries> tryBubble(List<Map<String, Object>> data,
+            Set<String> columns, Map<String, String> columnMapping) {
+        if (!hasColumns(columns, "x", "y", "z")) {
+            return Optional.empty();
+        }
+        var series = new DataSeries();
+        for (var row : data) {
+            var x = getNumber(row, columnMapping, "x");
+            var y = getNumber(row, columnMapping, "y");
+            var z = getNumber(row, columnMapping, "z");
+            if (x == null && y == null && z == null) {
+                continue;
+            }
+            var item = new DataSeriesItem3d(x, y, z);
+            applyColor(item, row, columnMapping, columns);
+            series.add(item);
+        }
+        return Optional.of(series);
+    }
+
+    private Optional<AbstractSeries> tryRange(List<Map<String, Object>> data,
+            Set<String> columns, Map<String, String> columnMapping) {
+        if (!hasColumns(columns, "low", "high") || hasBoxPlotColumns(columns)) {
+            return Optional.empty();
+        }
+        var xCol = findXColumn(columns);
+        var series = new DataSeries();
+        for (var i = 0; i < data.size(); i++) {
+            var row = data.get(i);
+            var x = resolveX(row, columnMapping, xCol, i);
+            var low = getNumber(row, columnMapping, "low");
+            var high = getNumber(row, columnMapping, "high");
+            if (low == null && high == null) {
+                continue;
+            }
+            var item = new DataSeriesItem(x, low, high);
+            applyColor(item, row, columnMapping, columns);
+            series.add(item);
+        }
+        return Optional.of(series);
+    }
+
+    private Optional<AbstractSeries> tryBullet(List<Map<String, Object>> data,
+            Set<String> columns, Map<String, String> columnMapping) {
+        if (!hasColumns(columns, "y", "target")) {
+            return Optional.empty();
+        }
+        var xCol = findXColumn(columns);
+        var series = new DataSeries();
+        for (var row : data) {
+            var y = getNumber(row, columnMapping, "y");
+            var target = getNumber(row, columnMapping, "target");
+            if (y == null && target == null) {
+                continue;
+            }
+            DataSeriesItemBullet item;
+            if (xCol != null) {
+                var x = getNumber(row, columnMapping, xCol);
+                item = new DataSeriesItemBullet(x, y, target);
             } else {
-                String category = val1 != null ? val1.toString() : "Unknown";
-                series.add(new DataSeriesItem(category, convertToNumber(val2)));
+                item = new DataSeriesItemBullet(y, target);
+            }
+            applyColor(item, row, columnMapping, columns);
+            series.add(item);
+        }
+        return Optional.of(series);
+    }
+
+    private Optional<AbstractSeries> tryWaterfall(
+            List<Map<String, Object>> data, Set<String> columns,
+            Map<String, String> columnMapping) {
+        if (!hasColumns(columns, "y", "waterfall_type")) {
+            return Optional.empty();
+        }
+        var series = new DataSeries();
+        for (var row : data) {
+            var name = columns.contains("name")
+                    ? getText(row, columnMapping, "name")
+                    : null;
+            var type = getText(row, columnMapping, "waterfall_type");
+            if (type != null) {
+                var sumItem = new WaterFallSum(name);
+                if ("intermediate".equalsIgnoreCase(type)) {
+                    sumItem.setIntermediate(true);
+                }
+                applyColor(sumItem, row, columnMapping, columns);
+                series.add(sumItem);
+            } else {
+                var y = getNumber(row, columnMapping, "y");
+                if (name == null && y == null) {
+                    continue;
+                }
+                var item = new DataSeriesItem(name, y);
+                applyColor(item, row, columnMapping, columns);
+                series.add(item);
+            }
+        }
+        return Optional.of(series);
+    }
+
+    private Optional<AbstractSeries> tryTimeline(List<Map<String, Object>> data,
+            Set<String> columns, Map<String, String> columnMapping) {
+        if (!hasColumns(columns, "name", "label", "description")) {
+            return Optional.empty();
+        }
+        var xCol = findXColumn(columns);
+        var series = new DataSeries();
+        for (var row : data) {
+            var name = getText(row, columnMapping, "name");
+            var label = getText(row, columnMapping, "label");
+            var description = getText(row, columnMapping, "description");
+            if (name == null && label == null && description == null) {
+                continue;
+            }
+            DataSeriesItemTimeline item;
+            if (xCol != null) {
+                var x = getNumber(row, columnMapping, xCol);
+                item = new DataSeriesItemTimeline(x, name, label, description);
+            } else {
+                item = new DataSeriesItemTimeline(name, label, description);
+            }
+            applyColor(item, row, columnMapping, columns);
+            series.add(item);
+        }
+        return Optional.of(series);
+    }
+
+    private Optional<AbstractSeries> tryFlags(List<Map<String, Object>> data,
+            Set<String> columns, Map<String, String> columnMapping) {
+        if (!hasColumns(columns, "title") || columns.contains("parent")) {
+            return Optional.empty();
+        }
+        var xCol = findXColumn(columns);
+        var series = new DataSeries();
+        for (var i = 0; i < data.size(); i++) {
+            var row = data.get(i);
+            var x = resolveX(row, columnMapping, xCol, i);
+            var title = getText(row, columnMapping, "title");
+            if (title == null) {
+                continue;
+            }
+            var item = new FlagItem(x, title);
+            if (columns.contains("text")) {
+                item.setText(getText(row, columnMapping, "text"));
+            }
+            applyColor(item, row, columnMapping, columns);
+            series.add(item);
+        }
+        return Optional.of(series);
+    }
+
+    // --- Pattern matchers returning specialized series types ---
+
+    private Optional<AbstractSeries> tryOrganization(
+            List<Map<String, Object>> data, Set<String> columns,
+            Map<String, String> columnMapping) {
+        if (!hasColumns(columns, "id", "name", "parent", "title")) {
+            return Optional.empty();
+        }
+        var series = new NodeSeries();
+        var nodesById = new HashMap<String, Node>();
+
+        // First pass: create all nodes.
+        for (var row : data) {
+            var id = getText(row, columnMapping, "id");
+            if (id == null) {
+                continue;
+            }
+            var name = getText(row, columnMapping, "name");
+            var title = getText(row, columnMapping, "title");
+            var node = new Node(id, name, title);
+            if (columns.contains("description")) {
+                node.setDescription(getText(row, columnMapping, "description"));
+            }
+            if (columns.contains("image")) {
+                node.setImage(getText(row, columnMapping, "image"));
+            }
+            var color = getText(row, columnMapping, "color");
+            if (color != null) {
+                node.setColor(new SolidColor(color));
+            }
+            nodesById.put(id, node);
+            series.addNode(node);
+        }
+
+        // Second pass: link children to parents.
+        for (var row : data) {
+            var id = getText(row, columnMapping, "id");
+            var parentId = getText(row, columnMapping, "parent");
+            if (id == null || parentId == null) {
+                continue;
+            }
+            var child = nodesById.get(id);
+            var parent = nodesById.get(parentId);
+            if (child != null && parent != null) {
+                series.add(parent, child);
+            }
+        }
+
+        return Optional.of(series);
+    }
+
+    private Optional<AbstractSeries> tryGantt(List<Map<String, Object>> data,
+            Set<String> columns, Map<String, String> columnMapping) {
+        if (!hasColumns(columns, "name", "start", "end")) {
+            return Optional.empty();
+        }
+        if (!hasTemporalStartEnd(data, columnMapping)) {
+            return Optional.empty();
+        }
+        var series = new GanttSeries();
+        for (var row : data) {
+            var name = getText(row, columnMapping, "name");
+            var start = getInstant(row, columnMapping, "start");
+            var end = getInstant(row, columnMapping, "end");
+            if (name == null && start == null && end == null) {
+                continue;
+            }
+            var item = new GanttSeriesItem();
+            item.setName(name);
+            if (start != null) {
+                item.setStart(start);
+            }
+            if (end != null) {
+                item.setEnd(end);
+            }
+            setOptionalText(item::setId, row, columnMapping, columns, "id");
+            setOptionalText(item::setParent, row, columnMapping, columns,
+                    "parent");
+            if (columns.contains("dependency")) {
+                var dep = getText(row, columnMapping, "dependency");
+                if (dep != null) {
+                    Arrays.stream(dep.split(",")).filter(id -> !id.isBlank())
+                            .map(String::trim).forEach(item::addDependency);
+                }
+            }
+            if (columns.contains("completed")) {
+                item.setCompleted(getNumber(row, columnMapping, "completed"));
+            }
+            var color = getText(row, columnMapping, "color");
+            if (color != null) {
+                item.setColor(new SolidColor(color));
+            }
+            series.add(item);
+        }
+        return Optional.of(series);
+    }
+
+    private Optional<AbstractSeries> tryTreemap(List<Map<String, Object>> data,
+            Set<String> columns, Map<String, String> columnMapping) {
+        if (!hasColumns(columns, "id", "parent", "value")) {
+            return Optional.empty();
+        }
+        var series = new TreeSeries();
+        for (var row : data) {
+            var id = getText(row, columnMapping, "id");
+            var parent = getText(row, columnMapping, "parent");
+            var value = getNumber(row, columnMapping, "value");
+            if (id == null && parent == null && value == null) {
+                continue;
+            }
+            var item = new TreeSeriesItem();
+            item.setId(id);
+            item.setParent(parent);
+            item.setValue(value);
+            setOptionalText(item::setName, row, columnMapping, columns, "name");
+            if (columns.contains("colorvalue")) {
+                item.setColorValue(getNumber(row, columnMapping, "colorvalue"));
+            }
+            series.add(item);
+        }
+        return Optional.of(series);
+    }
+
+    private Optional<AbstractSeries> tryHeatmap(List<Map<String, Object>> data,
+            Set<String> columns, Map<String, String> columnMapping) {
+        if (!hasColumns(columns, "x", "y", "value")) {
+            return Optional.empty();
+        }
+        var series = new HeatSeries();
+        for (var row : data) {
+            var x = getNumber(row, columnMapping, "x");
+            var y = getNumber(row, columnMapping, "y");
+            var value = getNumber(row, columnMapping, "value");
+            if (x == null || y == null) {
+                continue;
+            }
+            series.addHeatPoint(x.intValue(), y.intValue(), value);
+        }
+        return Optional.of(series);
+    }
+
+    // --- Fallback ---
+
+    private DataSeries convertFallback(List<Map<String, Object>> data,
+            Set<String> columns, Map<String, String> columnMapping) {
+        var lowerNames = new ArrayList<>(columns);
+        if (lowerNames.isEmpty()) {
+            return new DataSeries();
+        }
+
+        var classification = classifyColumns(data, columnMapping, lowerNames);
+        var nameCol = classification.nameCol;
+        var valueCol = classification.valueCol;
+
+        if (nameCol == null && valueCol != null && lowerNames.size() == 1) {
+            return convertSingleNumericColumn(data, columns, columnMapping,
+                    valueCol);
+        }
+        if (nameCol == null && valueCol != null) {
+            return convertAllNumericColumns(data, columns, columnMapping,
+                    lowerNames);
+        }
+        if (nameCol != null && valueCol != null) {
+            return convertCategoryAndValue(data, columns, columnMapping,
+                    nameCol, valueCol);
+        }
+        return new DataSeries();
+    }
+
+    private static DataSeries convertSingleNumericColumn(
+            List<Map<String, Object>> data, Set<String> columns,
+            Map<String, String> columnMapping, String valueCol) {
+        var series = new DataSeries();
+        for (var i = 0; i < data.size(); i++) {
+            var row = data.get(i);
+            var y = getNumber(row, columnMapping, valueCol);
+            if (y != null) {
+                var item = new DataSeriesItem(i, y);
+                applyColor(item, row, columnMapping, columns);
+                series.add(item);
             }
         }
         return series;
     }
 
-    private DataSeries convertThreeColumns(
-            List<Map<String, Object>> queryResults,
-            List<String> columnNames) {
-        DataSeries series = new DataSeries();
-        String col1Lower = columnNames.get(0).toLowerCase();
-        String col2Lower = columnNames.get(1).toLowerCase();
-        String col3Lower = columnNames.get(2).toLowerCase();
-
-        // Sankey: from, to, weight
-        if ((col1Lower.contains("from") || col1Lower.contains("source"))
-                && (col2Lower.contains("to") || col2Lower.contains("target")
-                        || col2Lower.contains("dest"))
-                && (col3Lower.contains("weight")
-                        || col3Lower.contains("value")
-                        || col3Lower.contains("flow"))) {
-            for (Map<String, Object> row : queryResults) {
-                String from = String.valueOf(row.get(columnNames.get(0)));
-                String to = String.valueOf(row.get(columnNames.get(1)));
-                Number weight = convertToNumber(row.get(columnNames.get(2)));
-                series.add(new DataSeriesItemSankey(from, to, weight));
+    private static DataSeries convertAllNumericColumns(
+            List<Map<String, Object>> data, Set<String> columns,
+            Map<String, String> columnMapping, List<String> lowerNames) {
+        var series = new DataSeries();
+        var xCol = lowerNames.get(0);
+        var yCol = lowerNames.get(1);
+        for (var row : data) {
+            var x = getNumber(row, columnMapping, xCol);
+            var y = getNumber(row, columnMapping, yCol);
+            if (x == null && y == null) {
+                continue;
             }
-            return series;
+            var item = new DataSeriesItem(x, y);
+            applyColor(item, row, columnMapping, columns);
+            series.add(item);
         }
-
-        // Xrange/Gantt: x/start, x2/end, y
-        if ((col1Lower.contains("start") || col1Lower.equals("x"))
-                && (col2Lower.contains("end") || col2Lower.equals("x2"))
-                && (col3Lower.equals("y") || col3Lower.contains("category")
-                        || col3Lower.contains("row"))) {
-            for (Map<String, Object> row : queryResults) {
-                Number x = convertToNumber(row.get(columnNames.get(0)));
-                Number x2 = convertToNumber(row.get(columnNames.get(1)));
-                Number y = convertToNumber(row.get(columnNames.get(2)));
-                series.add(new DataSeriesItemXrange(x, x2, y));
-            }
-            return series;
-        }
-
-        // Bullet: category, y, target
-        if (col3Lower.contains("target")) {
-            for (Map<String, Object> row : queryResults) {
-                Object cat = row.get(columnNames.get(0));
-                Number y = convertToNumber(row.get(columnNames.get(1)));
-                Number target = convertToNumber(row.get(columnNames.get(2)));
-                if (isNumeric(cat)) {
-                    series.add(new DataSeriesItemBullet(convertToNumber(cat), y,
-                            target));
-                } else {
-                    DataSeriesItemBullet item = new DataSeriesItemBullet(y,
-                            target);
-                    item.setName(cat != null ? cat.toString() : "Unknown");
-                    series.add(item);
-                }
-            }
-            return series;
-        }
-
-        // Range charts: x, low, high
-        if ((col2Lower.contains("low") || col2Lower.contains("min"))
-                && (col3Lower.contains("high")
-                        || col3Lower.contains("max"))) {
-            for (Map<String, Object> row : queryResults) {
-                Object xVal = row.get(columnNames.get(0));
-                Number low = convertToNumber(row.get(columnNames.get(1)));
-                Number high = convertToNumber(row.get(columnNames.get(2)));
-                if (isNumeric(xVal)) {
-                    series.add(new DataSeriesItem(convertToNumber(xVal), low,
-                            high));
-                } else {
-                    DataSeriesItem item = new DataSeriesItem();
-                    item.setName(xVal != null ? xVal.toString() : "Unknown");
-                    item.setLow(low);
-                    item.setHigh(high);
-                    series.add(item);
-                }
-            }
-            return series;
-        }
-
-        // Bubble chart: all numeric X, Y, Z
-        Object val1 = queryResults.get(0).get(columnNames.get(0));
-        Object val2 = queryResults.get(0).get(columnNames.get(1));
-        Object val3 = queryResults.get(0).get(columnNames.get(2));
-        if (isNumeric(val1) && isNumeric(val2) && isNumeric(val3)) {
-            for (Map<String, Object> row : queryResults) {
-                Number x = convertToNumber(row.get(columnNames.get(0)));
-                Number y = convertToNumber(row.get(columnNames.get(1)));
-                Number z = convertToNumber(row.get(columnNames.get(2)));
-                series.add(new DataSeriesItem3d(x, y, z));
-            }
-            return series;
-        }
-
-        return convertTwoColumns(queryResults, columnNames.subList(0, 2));
+        return series;
     }
 
-    private DataSeries convertFiveColumns(
-            List<Map<String, Object>> queryResults,
-            List<String> columnNames) {
-        DataSeries series = new DataSeries();
-        String col2Lower = columnNames.get(1).toLowerCase();
-        String col3Lower = columnNames.get(2).toLowerCase();
-        String col4Lower = columnNames.get(3).toLowerCase();
-        String col5Lower = columnNames.get(4).toLowerCase();
-
-        // OHLC/Candlestick
-        if ((col2Lower.contains("open") || col2Lower.equals("o"))
-                && (col3Lower.contains("high") || col3Lower.equals("h"))
-                && (col4Lower.contains("low") || col4Lower.equals("l"))
-                && (col5Lower.contains("close") || col5Lower.equals("c"))) {
-            for (Map<String, Object> row : queryResults) {
-                Number x = convertToNumber(row.get(columnNames.get(0)));
-                Number open = convertToNumber(row.get(columnNames.get(1)));
-                Number high = convertToNumber(row.get(columnNames.get(2)));
-                Number low = convertToNumber(row.get(columnNames.get(3)));
-                Number close = convertToNumber(row.get(columnNames.get(4)));
-                series.add(new OhlcItem(x, open, high, low, close));
+    private static DataSeries convertCategoryAndValue(
+            List<Map<String, Object>> data, Set<String> columns,
+            Map<String, String> columnMapping, String nameCol,
+            String valueCol) {
+        var series = new DataSeries();
+        for (var row : data) {
+            var name = getText(row, columnMapping, nameCol);
+            var y = getNumber(row, columnMapping, valueCol);
+            if (name == null && y == null) {
+                continue;
             }
-            return series;
+            var item = new DataSeriesItem(name, y);
+            applyColor(item, row, columnMapping, columns);
+            series.add(item);
         }
-
-        // BoxPlot
-        String col1Lower = columnNames.get(0).toLowerCase();
-        if ((col1Lower.contains("low") || col1Lower.contains("min"))
-                && (col2Lower.contains("q1") || col2Lower.contains("lower"))
-                && (col3Lower.contains("median") || col3Lower.contains("q2")
-                        || col3Lower.contains("mid"))
-                && (col4Lower.contains("q3") || col4Lower.contains("upper"))
-                && (col5Lower.contains("high")
-                        || col5Lower.contains("max"))) {
-            for (Map<String, Object> row : queryResults) {
-                Number low = convertToNumber(row.get(columnNames.get(0)));
-                Number q1 = convertToNumber(row.get(columnNames.get(1)));
-                Number median = convertToNumber(row.get(columnNames.get(2)));
-                Number q3 = convertToNumber(row.get(columnNames.get(3)));
-                Number high = convertToNumber(row.get(columnNames.get(4)));
-                series.add(new BoxPlotItem(low, q1, median, q3, high));
-            }
-            return series;
-        }
-
-        // All numeric fallback: assume boxplot
-        Object val1 = queryResults.get(0).get(columnNames.get(0));
-        Object val2 = queryResults.get(0).get(columnNames.get(1));
-        Object val3 = queryResults.get(0).get(columnNames.get(2));
-        Object val4 = queryResults.get(0).get(columnNames.get(3));
-        Object val5 = queryResults.get(0).get(columnNames.get(4));
-        if (isNumeric(val1) && isNumeric(val2) && isNumeric(val3)
-                && isNumeric(val4) && isNumeric(val5)) {
-            for (Map<String, Object> row : queryResults) {
-                Number low = convertToNumber(row.get(columnNames.get(0)));
-                Number q1 = convertToNumber(row.get(columnNames.get(1)));
-                Number median = convertToNumber(row.get(columnNames.get(2)));
-                Number q3 = convertToNumber(row.get(columnNames.get(3)));
-                Number high = convertToNumber(row.get(columnNames.get(4)));
-                series.add(new BoxPlotItem(low, q1, median, q3, high));
-            }
-            return series;
-        }
-
-        return convertTwoColumns(queryResults, columnNames.subList(0, 2));
+        return series;
     }
 
-    private boolean isNumeric(Object obj) {
-        if (obj == null) {
+    /**
+     * Classifies columns into a category column and a value column by scanning
+     * row values to determine types.
+     */
+    private static ColumnClassification classifyColumns(
+            List<Map<String, Object>> data, Map<String, String> columnMapping,
+            List<String> lowerNames) {
+        String nameCol = null;
+        String valueCol = null;
+        for (var lowerName : lowerNames) {
+            if (nameCol != null && valueCol != null) {
+                break;
+            }
+            var numeric = findColumnType(data, columnMapping, lowerName);
+            if (valueCol == null && Boolean.TRUE.equals(numeric)) {
+                valueCol = lowerName;
+            } else if (nameCol == null && !Boolean.TRUE.equals(numeric)) {
+                nameCol = lowerName;
+            }
+        }
+
+        // If we found a category column but no value column, use the first
+        // remaining column as the value column (it may have all-null values).
+        if (nameCol != null && valueCol == null && lowerNames.size() >= 2) {
+            var finalNameCol = nameCol;
+            valueCol = lowerNames.stream()
+                    .filter(name -> !name.equals(finalNameCol)).findFirst()
+                    .orElse(null);
+        }
+
+        return new ColumnClassification(nameCol, valueCol);
+    }
+
+    /**
+     * Determines whether a column is numeric by finding the first non-null
+     * value across all rows.
+     *
+     * @return {@code true} if numeric, {@code false} if non-numeric,
+     *         {@code null} if all values are null
+     */
+    private static Boolean findColumnType(List<Map<String, Object>> data,
+            Map<String, String> columnMapping, String lowerName) {
+        return data.stream().map(row -> getRaw(row, columnMapping, lowerName))
+                .filter(Objects::nonNull).findFirst()
+                .map(DefaultDataConverter::isNumericValue).orElse(null);
+    }
+
+    private record ColumnClassification(String nameCol,
+            String valueCol) implements Serializable {
+    }
+
+    // --- Value accessors ---
+
+    private static Object getRaw(Map<String, Object> row,
+            Map<String, String> columnMapping, String lowerName) {
+        var originalKey = columnMapping.get(lowerName);
+        return originalKey == null ? null : row.get(originalKey);
+    }
+
+    private static Number getNumber(Map<String, Object> row,
+            Map<String, String> columnMapping, String column) {
+        return toNumber(getRaw(row, columnMapping, column));
+    }
+
+    private static String getText(Map<String, Object> row,
+            Map<String, String> columnMapping, String column) {
+        return toText(getRaw(row, columnMapping, column));
+    }
+
+    private static Instant getInstant(Map<String, Object> row,
+            Map<String, String> columnMapping, String column) {
+        return toInstant(getRaw(row, columnMapping, column));
+    }
+
+    // --- Utility methods ---
+
+    private static Number resolveX(Map<String, Object> row,
+            Map<String, String> columnMapping, String xCol, int rowIndex) {
+        return xCol != null ? getNumber(row, columnMapping, xCol) : rowIndex;
+    }
+
+    private static void applyColor(DataSeriesItem item, Map<String, Object> row,
+            Map<String, String> columnMapping, Set<String> columns) {
+        if (columns.contains("color")) {
+            var color = getText(row, columnMapping, "color");
+            if (color != null) {
+                item.setColor(new SolidColor(color));
+            }
+        }
+    }
+
+    private static void setOptionalText(Consumer<String> setter,
+            Map<String, Object> row, Map<String, String> columnMapping,
+            Set<String> columns, String columnName) {
+        if (columns.contains(columnName)) {
+            setter.accept(getText(row, columnMapping, columnName));
+        }
+    }
+
+    private static boolean hasColumns(Set<String> columns, String... required) {
+        return Arrays.stream(required).allMatch(columns::contains);
+    }
+
+    private static boolean hasBoxPlotColumns(Set<String> columns) {
+        return columns.contains("q1") || columns.contains("median")
+                || columns.contains("q3");
+    }
+
+    private static String findXColumn(Set<String> columns) {
+        return X_COLUMN_NAMES.stream().filter(columns::contains).findFirst()
+                .orElse(null);
+    }
+
+    /**
+     * Checks whether at least one row has a temporal or numeric value in the
+     * {@code start} or {@code end} column.
+     */
+    private static boolean hasTemporalStartEnd(List<Map<String, Object>> data,
+            Map<String, String> columnMapping) {
+        for (var row : data) {
+            if (isTemporalOrNumeric(getRaw(row, columnMapping, "start"))) {
+                return true;
+            }
+            if (isTemporalOrNumeric(getRaw(row, columnMapping, "end"))) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    // --- Value conversion methods ---
+
+    /**
+     * Builds a mapping from lowercase column name to the original-case key as
+     * it appears in the row map. If multiple columns map to the same lowercase
+     * name (e.g. "Name" and "NAME"), the first one wins and a warning is
+     * logged.
+     */
+    private static Map<String, String> buildColumnMapping(
+            Map<String, Object> row) {
+        var mapping = new LinkedHashMap<String, String>();
+        for (var key : row.keySet()) {
+            var lowerKey = key.toLowerCase(Locale.ENGLISH);
+            var existing = mapping.putIfAbsent(lowerKey, key);
+            if (existing != null) {
+                LOGGER.warn(
+                        "Duplicate column name after case folding: '{}'"
+                                + " and '{}' both map to '{}'. Using '{}'.",
+                        existing, key, lowerKey, existing);
+            }
+        }
+        return mapping;
+    }
+
+    /**
+     * Converts a value to a {@link Number}. Handles {@link Number},
+     * {@link Instant}, {@link Timestamp}, {@link java.sql.Date},
+     * {@link LocalDate}, {@link LocalDateTime}, {@link Date}, and numeric
+     * strings.
+     */
+    private static Number toNumber(Object value) {
+        if (value == null) {
+            return null;
+        }
+        if (value instanceof Number number) {
+            return number;
+        }
+        var instant = toInstant(value);
+        if (instant != null) {
+            return Util.toHighchartsTS(instant);
+        }
+        try {
+            return Double.parseDouble(value.toString());
+        } catch (NumberFormatException e) {
+            return null;
+        }
+    }
+
+    /**
+     * Converts a value to an {@link Instant}. Handles {@link Instant},
+     * {@link Timestamp}, {@link java.sql.Date}, {@link LocalDate},
+     * {@link LocalDateTime}, {@link Date}, and numeric values (interpreted as
+     * milliseconds since epoch).
+     */
+    private static Instant toInstant(Object value) {
+        return switch (value) {
+        case Instant instant -> instant;
+        case Timestamp timestamp -> timestamp.toInstant();
+        case java.sql.Date sqlDate ->
+            sqlDate.toLocalDate().atStartOfDay(ZoneOffset.UTC).toInstant();
+        case LocalDate localDate ->
+            localDate.atStartOfDay(ZoneOffset.UTC).toInstant();
+        case LocalDateTime localDateTime ->
+            localDateTime.toInstant(ZoneOffset.UTC);
+        case Date date -> date.toInstant();
+        case Number number -> Instant.ofEpochMilli(number.longValue());
+        case null, default -> null;
+        };
+    }
+
+    private static String toText(Object value) {
+        return value == null ? null : value.toString();
+    }
+
+    private static boolean isTemporalOrNumeric(Object value) {
+        return value instanceof Number || value instanceof Instant
+                || value instanceof LocalDate || value instanceof LocalDateTime
+                || value instanceof Date;
+    }
+
+    /**
+     * Checks whether a value is numeric (a {@link Number} or a parseable
+     * numeric string). Temporal types are intentionally <b>not</b> considered
+     * numeric here: in the fallback path, date columns are more useful as
+     * category labels than as millisecond Y-values. Named pattern matchers use
+     * {@link #toNumber(Object)} directly, which does handle temporals.
+     */
+    private static boolean isNumericValue(Object value) {
+        if (value == null) {
             return false;
         }
-        if (obj instanceof Number) {
+        if (value instanceof Number) {
             return true;
         }
         try {
-            Double.parseDouble(obj.toString());
+            Double.parseDouble(value.toString());
             return true;
         } catch (NumberFormatException e) {
             return false;
-        }
-    }
-
-    private Number convertToNumber(Object obj) {
-        if (obj == null) {
-            return 0;
-        }
-        if (obj instanceof Number) {
-            return (Number) obj;
-        }
-        if (obj instanceof java.util.Date) {
-            return ((java.util.Date) obj).getTime();
-        }
-        if (obj instanceof java.time.Instant) {
-            return ((java.time.Instant) obj).toEpochMilli();
-        }
-        if (obj instanceof java.time.LocalDate) {
-            return ((java.time.LocalDate) obj)
-                    .atStartOfDay(java.time.ZoneId.systemDefault()).toInstant()
-                    .toEpochMilli();
-        }
-        if (obj instanceof java.time.LocalDateTime) {
-            return ((java.time.LocalDateTime) obj)
-                    .atZone(java.time.ZoneId.systemDefault()).toInstant()
-                    .toEpochMilli();
-        }
-        try {
-            return Double.parseDouble(obj.toString());
-        } catch (NumberFormatException e) {
-            return 0;
         }
     }
 }
